force-app/main/default/objects/Complaint__c/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <description>Location of the complaint</description>
    <label>Geo_Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>