force-app/main/default/objects/Complaint__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaints (Related Contact)</relationshipLabel>
    <relationshipName>Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>