force-app/main/default/objects/Complaint__c/fields/Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Reported_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person reporting the complaint.</description>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>