force-app/main/default/objects/Complaint__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>Date complaint was filed.</description>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>