force-app/main/default/objects/Complaint__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>