force-app/main/default/objects/Complaint__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Zone</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>