force-app/main/default/objects/Complaint__c/validationRules/Require_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Description</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
    <errorMessage>Please add a short description of the complaint.</errorMessage>
</ValidationRule>