force-app/main/default/objects/Complaint__c/validationRules/Validate_ComplaintGeoLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_ComplaintGeoLocation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Geo_Location__c)</errorConditionFormula>
    <errorDisplayField>Geo_Location__Latitude__s</errorDisplayField>
    <errorMessage>Complaint Location is required.</errorMessage>
</ValidationRule>